added purple & White Toran

--- a/index.html
+++ b/index.html
@@ -505,6 +505,21 @@
   </a>
 </div>
 
+<!-- Product 25: Purple & White Toran-->
+<div class="product toran">
+  <img src="https://i.ibb.co/vxz0vj44/Whats-App-Image-2025-07-03-at-01-26-51-f041484d.jpg" alt="Purple and White Toran">
+  <h3>Purple & White Toran</h3>
+  <p><strong>Price:</strong> ₹1550</p>
+  <p>
+    • Premium quality 3ft toran made from purple and white fabric<br>
+    • Crafted with high-quality material for elegant festive decor
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Purple & White Toran' for ₹1550.%0AProduct Image: https://i.ibb.co/vxz0vj44/Whats-App-Image-2025-07-03-at-01-26-51-f041484d.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
+
  </div>
 
   <!-- ✅ Filter Script -->
