--- a/index.html
+++ b/index.html
@@ -519,6 +519,19 @@
   </a>
 </div>
 
+<!-- Product 26: orange & White Toran-->
+<div class="product toran">
+  <img src="https://i.ibb.co/1tGNd5zL/Whats-App-Image-2025-07-03-at-01-27-49-6bf934e8.jpg" alt="Orange and White Toran">
+  <h3>Orange & White Toran</h3>
+  <p><strong>Price:</strong> ₹1550</p>
+  <p>
+    • Premium quality 3ft toran made from orange and white fabric<br>
+    • Crafted with high-quality material for elegant festive decor
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Orange & White Toran' for ₹1550.%0AProduct Image: https://i.ibb.co/1tGNd5zL/Whats-App-Image-2025-07-03-at-01-27-49-6bf934e8.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
