added moroon backdrop

--- a/index.html
+++ b/index.html
@@ -533,6 +533,22 @@
   </a>
 </div>
 
+<!-- Product 27: Maroon Backdrop-->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/39RsxCvq/Whats-App-Image-2025-07-03-at-01-49-20-d9a50a23.jpg" alt="Maroon Backdrop">
+  <h3>Maroon Backdrop</h3>
+  <p><strong>Price:</strong> ₹2800</p>
+  <p>
+    • 3 feet maroon toran (1 piece) with side latkans<br>
+    • White, maroon, and green petal side latkans – 3 feet (2 pieces)<br>
+    • Elegant and festive setup for home or event decor
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Maroon Backdrop' for ₹2800.%0AProduct Image: https://i.ibb.co/39RsxCvq/Whats-App-Image-2025-07-03-at-01-49-20-d9a50a23.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
+
  </div>
 
   <!-- ✅ Filter Script -->
