added Rani Pink & White Floral Backdrop

--- a/index.html
+++ b/index.html
@@ -548,6 +548,23 @@
   </a>
 </div>
 
+<!-- Product 28: Rani Pink & White Floral Backdrop-->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/7xCkz0p/Whats-App-Image-2025-07-03-at-01-55-09-cd57b93b.jpg" alt="Rani Pink Floral Backdrop">
+  <h3>Rani Pink & White Floral Backdrop</h3>
+  <p><strong>Price:</strong> ₹2150</p>
+  <p>
+    • 4 feet side latkans – 2 pieces (Rani pink flowers with white petals)<br>
+    • 3.5 feet double petal floral decor – 2 pieces (Rani color & white petals)<br>
+    • 1.5 feet small latkans – 6 pieces (Rani petals with white flower)<br>
+    • A vibrant and colorful backdrop perfect for festive setups
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Rani Pink & White Floral Backdrop' for ₹2150.%0AProduct Image: https://i.ibb.co/7xCkz0p/Whats-App-Image-2025-07-03-at-01-55-09-cd57b93b.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
+
 
  </div>
 
