added Green Petal Patti Toran

--- a/index.html
+++ b/index.html
@@ -564,6 +564,20 @@
   </a>
 </div>
 
+<!-- Product 29: Green Petal Patti Toran-->
+<div class="product toran">
+  <img src="https://i.ibb.co/TBJBCvPJ/Whats-App-Image-2025-07-03-at-02-01-15-b95f75ab.jpg" alt="Green Petal Patti Toran">
+  <h3>Green Petal Patti Toran</h3>
+  <p><strong>Price:</strong> ₹1250</p>
+  <p>
+    • 3 feet toran featuring green petal patti<br>
+    • Attached jasmine bead moti and lemon flowers<br>
+    • Crafted with vibrant, washable materials perfect for festive entrances
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Green Petal Patti Toran' for ₹1250.%0AProduct Image: https://i.ibb.co/TBJBCvPJ/Whats-App-Image-2025-07-03-at-02-01-15-b95f75ab.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
 
  </div>
