--- a/index.html
+++ b/index.html
@@ -579,6 +579,20 @@
   </a>
 </div>
 
+<!-- Product 30: Gajra (Red, Yellow, Aboli)-->
+<div class="product haar">
+  <img src="https://i.ibb.co/gZcfSgL/Whats-App-Image-2025-07-03-at-02-06-46-0f02ef2e.jpg" alt="Gajra Haar - Red, Yellow, Aboli">
+  <h3>Gajra (Red, Yellow, Aboli) – 1 Feet</h3>
+  <p><strong>Price:</strong> ₹200 each</p>
+  <p>
+    • 1 feet gajra available in 3 vibrant colors: Red, Lemon Yellow, and Aboli<br>
+    • Made from fabric material – washable and reusable<br>
+    • Beautiful and elegant design, perfect for traditional decor
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 1 Feet Gajra (₹200 each) in Red, Yellow, or Aboli.%0AProduct Image: https://i.ibb.co/gZcfSgL/Whats-App-Image-2025-07-03-at-02-06-46-0f02ef2e.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
