added Prajakta & Juhi Gajra

--- a/index.html
+++ b/index.html
@@ -594,6 +594,21 @@
   </a>
 </div>
 
+<!-- Product 31: Prajakta & Juhi Gajra-->
+<div class="product haar">
+  <img src="https://i.ibb.co/d4rwjHtW/Whats-App-Image-2025-07-03-at-02-12-55-d544fd73.jpg" alt="Prajakta and Juhi Gajra">
+  <h3>Prajakta & Juhi Gajra – 1 Feet</h3>
+  <p><strong>Price:</strong> ₹100 each</p>
+  <p>
+    • Traditional 1-feet gajra available in Prajakta and Juhi flower styles<br>
+    • Elegant, lightweight, and washable<br>
+    • Ideal for decorative setups, hair adornment, or spiritual spaces
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the Prajakta & Juhi Gajra – 1 Feet (₹100 each).%0AProduct Image: https://i.ibb.co/d4rwjHtW/Whats-App-Image-2025-07-03-at-02-12-55-d544fd73.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
