added Jasmine (Mogra) Gajra

--- a/index.html
+++ b/index.html
@@ -609,6 +609,21 @@
   </a>
 </div>
 
+<!-- Product 32: Jasmine (Mogra) Gajra-->
+<div class="product haar">
+  <img src="https://i.ibb.co/RpKjBXCn/Whats-App-Image-2025-07-03-at-02-18-18-98c3b721.jpg" alt="Jasmine Mogra Gajra">
+  <h3>Jasmine (Mogra) Gajra</h3>
+  <p><strong>Price:</strong> ₹570</p>
+  <p>
+    • Premium-quality Jasmine (Mogra) gajra<br>
+    • Delicate, fragrant appearance – ideal for weddings, poojas, and festive décor<br>
+    • Crafted to provide an elegant and luxurious traditional touch
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the Jasmine (Mogra) Gajra for ₹570.%0AProduct Image: https://i.ibb.co/RpKjBXCn/Whats-App-Image-2025-07-03-at-02-18-18-98c3b721.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
