added Single Flower

--- a/index.html
+++ b/index.html
@@ -624,6 +624,21 @@
   </a>
 </div>
 
+<!-- Product 32: Single Flower-->
+<div class="product homedecor">
+  <img src="https://i.ibb.co/ycrbqbGT/Whats-App-Image-2025-07-03-at-02-23-45-0faf5978.jpg" alt="Single Flower - Home Decor">
+  <h3>Single Flower – Home Decor</h3>
+  <p><strong>Price:</strong> ₹25 each</p>
+  <p>
+    • Beautiful individual flower décor pieces<br>
+    • Available in 6 vibrant colors<br>
+    • Ideal for rangoli, pooja decoration, gift packaging, and festive decor
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order Single Flower – Home Decor for ₹25 each.%0AAvailable in 6 colors.%0AImage: https://i.ibb.co/ycrbqbGT/Whats-App-Image-2025-07-03-at-02-23-45-0faf5978.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
