--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 </div>
 
 <!-- Product 32: Single Flower-->
-<div class="product homedecor">
+<div class="product Home Decor">
   <img src="https://i.ibb.co/ycrbqbGT/Whats-App-Image-2025-07-03-at-02-23-45-0faf5978.jpg" alt="Single Flower - Home Decor">
   <h3>Single Flower – Home Decor</h3>
   <p><strong>Price:</strong> ₹25 each</p>
