added Mini Decorative Flowers

--- a/index.html
+++ b/index.html
@@ -639,6 +639,20 @@
   </a>
 </div>
 
+<!-- Product 32: Mini Decorative Flowers-->
+<div class="product decor">
+  <img src="https://i.ibb.co/fYtfkdtc/Whats-App-Image-2025-07-03-at-02-27-12-453616ec.jpg" alt="Mini Decorative Flowers">
+  <h3>Mini Decorative Flowers</h3>
+  <p><strong>Price:</strong> ₹10 each</p>
+  <p>
+    • Small decorative flower pieces<br>
+    • 6 color options available<br>
+    • Perfect for festive decoration and home decor accents
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order Mini Decorative Flowers for ₹10 each.%0A6 colors available.%0AImage: https://i.ibb.co/fYtfkdtc/Whats-App-Image-2025-07-03-at-02-27-12-453616ec.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
