--- a/index.html
+++ b/index.html
@@ -643,9 +643,9 @@
 <div class="product decor">
   <img src="https://i.ibb.co/fYtfkdtc/Whats-App-Image-2025-07-03-at-02-27-12-453616ec.jpg" alt="Mini Decorative Flowers">
   <h3>Mini Decorative Flowers</h3>
-  <p><strong>Price:</strong> ₹10 each</p>
+  <p><strong>Price:</strong> ₹150 each</p>
   <p>
-    • Small decorative flower pieces<br>
+    • Decorative flower pieces<br>
     • 6 color options available<br>
     • Perfect for festive decoration and home decor accents
   </p>
