added Single Decorative Flower

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
 <!-- Product 32: Mini Decorative Flowers-->
 <div class="product decor">
   <img src="https://i.ibb.co/fYtfkdtc/Whats-App-Image-2025-07-03-at-02-27-12-453616ec.jpg" alt="Mini Decorative Flowers">
-  <h3>Mini Decorative Flowers</h3>
+  <h3>Decorative Flowers</h3>
   <p><strong>Price:</strong> ₹150 each</p>
   <p>
     • Decorative flower pieces<br>
@@ -650,6 +650,21 @@
     • Perfect for festive decoration and home decor accents
   </p>
   <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order Mini Decorative Flowers for ₹10 each.%0A6 colors available.%0AImage: https://i.ibb.co/fYtfkdtc/Whats-App-Image-2025-07-03-at-02-27-12-453616ec.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
+<!-- Product 33: Single Decorative Flower-->
+<div class="product decor">
+  <img src="https://i.ibb.co/nqt7trCq/Whats-App-Image-2025-07-03-at-02-31-56-40859a22.jpg" alt="Single Decorative Flower">
+  <h3>Single Decorative Flower</h3>
+  <p><strong>Price:</strong> ₹10 each</p>
+  <p>
+    • Beautiful single flowers<br>
+    • 6 colors available<br>
+    • Ideal for home decoration and DIY craft
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order Single Decorative Flowers for ₹10 each.%0A6 colors available.%0AImage: https://i.ibb.co/nqt7trCq/Whats-App-Image-2025-07-03-at-02-31-56-40859a22.jpg" target="_blank">
     Buy on WhatsApp
   </a>
 </div>
