added Banana Leaf Plastic

--- a/index.html
+++ b/index.html
@@ -669,6 +669,22 @@
   </a>
 </div>
 
+<!-- Product 34: Banana Leaf Plastic-->
+<div class="product decor">
+  <img src="https://i.ibb.co/M5xhNxpV/Whats-App-Image-2025-07-03-at-02-44-25-01d1e17c.jpg" alt="Banana Leaf Plastic - Big Size">
+  <h3>Banana Leaf Plastic (Big Size)</h3>
+  <p><strong>Price:</strong></p>
+  <ul style="text-align: left; font-size: 14px; padding-left: 20px;">
+    <li>1 piece – ₹180</li>
+    <li>2 pieces – ₹340 (₹170 each)</li>
+    <li>10 pieces – ₹1600 (₹160 each)</li>
+  </ul>
+  <p>Durable, washable plastic banana leaves – perfect for festive or home decoration.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order Banana Leaf Plastic (Big Size).%0A1 pc – ₹180%0A2 pcs – ₹340%0A10 pcs – ₹1600%0AImage: https://i.ibb.co/M5xhNxpV/Whats-App-Image-2025-07-03-at-02-44-25-01d1e17c.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
