added small Banana Leaf Plastic

--- a/index.html
+++ b/index.html
@@ -685,6 +685,22 @@
   </a>
 </div>
 
+<!-- Product 35: Small Banana Leaf Plastic-->
+<div class="product decor">
+  <img src="https://i.ibb.co/hRv4s9pQ/Whats-App-Image-2025-07-03-at-02-49-52-e0081c80.jpg" alt="Banana Leaf Plastic - Small Size">
+  <h3>Banana Leaf Plastic (Small Size)</h3>
+  <p><strong>Price:</strong></p>
+  <ul style="text-align: left; font-size: 14px; padding-left: 20px;">
+    <li>1 piece – ₹140</li>
+    <li>2 pieces – ₹260 (₹130 each)</li>
+    <li>10 pieces – ₹1200 (₹120 each)</li>
+  </ul>
+  <p>Compact and durable plastic banana leaves, ideal for home décor or pooja decoration.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order Banana Leaf Plastic (Small Size).%0A1 pc – ₹140%0A2 pcs – ₹260%0A10 pcs – ₹1200%0AImage: https://i.ibb.co/hRv4s9pQ/Whats-App-Image-2025-07-03-at-02-49-52-e0081c80.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
