--- a/index.html
+++ b/index.html
@@ -701,6 +701,28 @@
   </a>
 </div>
 
+<!-- Product 36: Samai Patti-->
+<div class="product decor">
+  <img src="https://i.ibb.co/4g32ktGv/Whats-App-Image-2025-07-03-at-02-55-23-6570ab74.jpg" alt="Samai Patti">
+  <h3>Samai Patti (1 Feet)</h3>
+  <p><strong>Price:</strong> ₹120</p>
+  <p>Traditional Samai Patti ideal for pooja and festive home decor. Durable and vibrant design enhances traditional appeal.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order Samai Patti (1 Feet) – ₹120.%0AImage: https://i.ibb.co/4g32ktGv/Whats-App-Image-2025-07-03-at-02-55-23-6570ab74.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
+<!-- Product 37: Samai Base-->
+ <div class="product decor">
+  <img src="https://i.ibb.co/4g32ktGv/Whats-App-Image-2025-07-03-at-02-55-23-6570ab74.jpg" alt="Samai Base">
+  <h3>Samai Base (8 Inches)</h3>
+  <p><strong>Price:</strong> ₹120</p>
+  <p>Red round velvet base with green mango leaf and elegant Kundan design – perfect for enhancing traditional Samai stands.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order Samai Base (8 Inches) – ₹120.%0AImage: https://i.ibb.co/4g32ktGv/Whats-App-Image-2025-07-03-at-02-55-23-6570ab74.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
