added Metal Lakshmi Face Samai & Kalash Decoration

--- a/index.html
+++ b/index.html
@@ -723,6 +723,19 @@
   </a>
 </div>
 
+<!-- Product 38: Metal Lakshmi Face Samai & Kalash Decoration-->
+<div class="product decor">
+  <img src="https://i.ibb.co/y1XWNyr/Whats-App-Image-2025-07-03-at-00-44-01-54f10738.jpg" alt="Lakshmi Face Kalash Decoration">
+  <h3>Metal Lakshmi Face Samai & Kalash Decoration</h3>
+  <p><strong>Price:</strong> ₹720</p>
+  <p>
+    Beautifully crafted Metal Lakshmi face Samai decoration with attached Kalash. Features MDF blue color dress and elegant Vani decoration – ideal for pooja, festivals, or home altars.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the Metal Lakshmi Face Samai & Kalash Decoration – ₹720.%0AImage: https://i.ibb.co/y1XWNyr/Whats-App-Image-2025-07-03-at-00-44-01-54f10738.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
