added Small Tulsi Vrindavan Rangoli

--- a/index.html
+++ b/index.html
@@ -736,6 +736,20 @@
   </a>
 </div>
 
+<!-- Product 38: Small Tulsi Vrindavan Rangoli-->
+<div class="product decor">
+  <img src="https://i.ibb.co/tTmV2jkL/Whats-App-Image-2025-06-08-at-20-49-32-ff70b5f0.jpg" alt="Small Tulsi Vrindavan Rangoli">
+  <h3>🌿 Small Tulsi Vrindavan Rangoli – 5 Inches</h3>
+  <p><strong>Price:</strong> ₹175</p>
+  <p>
+    Compact yet charming, this 5-inch Tulsi Vrindavan rangoli adds a traditional vibe to your pooja space or festive décor. <br>
+    Crafted with fine beads and jewel accents, it’s ideal for small setups or gifting.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the Small Tulsi Vrindavan Rangoli – ₹175.%0AImage: https://i.ibb.co/tTmV2jkL/Whats-App-Image-2025-06-08-at-20-49-32-ff70b5f0.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
