added Medium Tulsi Vrindavan Rangoli

--- a/index.html
+++ b/index.html
@@ -750,6 +750,21 @@
   </a>
 </div>
 
+<!-- Product 39: Medium Tulsi Vrindavan Rangoli-->
+<div class="product decor">
+  <img src="https://i.ibb.co/wZnvsHYx/Whats-App-Image-2025-06-08-at-20-56-26-255c063c.jpg" alt="Medium Tulsi Vrindavan Rangoli">
+  <h3>🌿 Medium Tulsi Vrindavan Rangoli – 8 Inches</h3>
+  <p><strong>Price:</strong> ₹375</p>
+  <p>
+    Add a touch of tradition and grace to your space with this elegant 8-inch Tulsi Vrindavan rangoli.<br>
+    Decorated with Swastik symbols, rich colors, and fine beadwork, it’s perfect for daily worship, festivals, or gifting.<br>
+    🖐 Handcrafted with love
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the Medium Tulsi Vrindavan Rangoli – ₹375.%0AImage: https://i.ibb.co/wZnvsHYx/Whats-App-Image-2025-06-08-at-20-56-26-255c063c.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
