--- a/index.html
+++ b/index.html
@@ -737,21 +737,23 @@
 </div>
 
 <!-- Product 38: Small Tulsi Vrindavan Rangoli-->
-<div class="product decor">
+<div class="product rangoli">
   <img src="https://i.ibb.co/tTmV2jkL/Whats-App-Image-2025-06-08-at-20-49-32-ff70b5f0.jpg" alt="Small Tulsi Vrindavan Rangoli">
   <h3>🌿 Small Tulsi Vrindavan Rangoli – 5 Inches</h3>
   <p><strong>Price:</strong> ₹175</p>
   <p>
-    Compact yet charming, this 5-inch Tulsi Vrindavan rangoli adds a traditional vibe to your pooja space or festive décor. <br>
-    Crafted with fine beads and jewel accents, it’s ideal for small setups or gifting.
+    Compact yet charming, this 5-inch Tulsi Vrindavan rangoli adds a traditional vibe to your pooja space or festive décor.<br>
+    Crafted with fine beads and jewel accents, it’s ideal for small setups or gifting.<br>
+    🎁 Budget-friendly and beautiful
   </p>
   <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the Small Tulsi Vrindavan Rangoli – ₹175.%0AImage: https://i.ibb.co/tTmV2jkL/Whats-App-Image-2025-06-08-at-20-49-32-ff70b5f0.jpg" target="_blank">
     Buy on WhatsApp
   </a>
 </div>
 
+
 <!-- Product 39: Medium Tulsi Vrindavan Rangoli-->
-<div class="product decor">
+<div class="product rangoli">
   <img src="https://i.ibb.co/wZnvsHYx/Whats-App-Image-2025-06-08-at-20-56-26-255c063c.jpg" alt="Medium Tulsi Vrindavan Rangoli">
   <h3>🌿 Medium Tulsi Vrindavan Rangoli – 8 Inches</h3>
   <p><strong>Price:</strong> ₹375</p>
@@ -764,6 +766,7 @@
     Buy on WhatsApp
   </a>
 </div>
+
 
  </div>
 
