--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
 
-  <h1>Deep Creation Product Catalog</h1>
+  <h1>DEEP CREATION</h1>
 
   <!-- ✅ Categories Filter -->
  <div class="categories">
