edited  DEEP CREATION

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
   <img src="https://i.ibb.co/LzhdpW48/Whats-App-Image-2025-06-17-at-23-08-24-61b6a990.jpg" alt="Baby Pink BackDrop">
   <h3>Baby Pink BackDrop</h3>
   <p><strong>Price:</strong> ₹2150</p>
+  <p>SOLD OUT</p>
   <p>
     The set includes a 4.5 feet baby pink and white toran made from premium cloth (1 piece).<br>
     Complemented by matching 4.5 feet baby pink and white latkans (4 pieces).<br>
