added Tulsi Vrindavan Rangoli

--- a/index.html
+++ b/index.html
@@ -768,6 +768,21 @@
   </a>
 </div>
 
+<!-- Product 39: Tulsi Vrindavan Rangoli-->
+<div class="product rangoli">
+  <img src="https://i.ibb.co/mCFrSNjT/Whats-App-Image-2025-06-08-at-21-02-30-3760f015.jpg" alt="Tulsi Vrindavan Rangoli – 12 Inches">
+  <h3>🌿 Tulsi Vrindavan Rangoli – 12 Inches</h3>
+  <p><strong>Price:</strong> ₹720</p>
+  <p>
+    Bring divine elegance to your home with this beautifully handcrafted Tulsi Vrindavan rangoli.<br>
+    Adorned with intricate designs, vibrant colors, and delicate embellishments,<br>
+    it's perfect for festivals, poojas, or traditional home décor.<br>
+    📦 Handmade | Ready to ship
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the Tulsi Vrindavan Rangoli – ₹720.%0AImage: https://i.ibb.co/mCFrSNjT/Whats-App-Image-2025-06-08-at-21-02-30-3760f015.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
