added Lotus Panti Diya

--- a/index.html
+++ b/index.html
@@ -784,6 +784,22 @@
   </a>
 </div>
 
+<!-- Product 40: Lotus Panti Diya-->
+<div class="product rangoli">
+  <img src="https://i.ibb.co/60tyZcgz/Whats-App-Image-2025-06-08-at-20-34-05-eec94bd5.jpg" alt="Lotus Panti Diya">
+  <h3>Lotus Panti Diya</h3>
+  <p><strong>Price:</strong> ₹600/pair</p>
+  <p>
+    Beautiful Lotus Panti Diya crafted with red and dark green lotus and vibrant yellow accents.<br>
+    Made from OHP sheet and soft velvet cloth for an elegant festive touch.<br>
+    Ideal for Diwali, pooja decor, or gifting.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the Lotus Panti Diya – ₹600/pair.%0AImage: https://i.ibb.co/60tyZcgz/Whats-App-Image-2025-06-08-at-20-34-05-eec94bd5.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
+
  </div>
 
   <!-- ✅ Filter Script -->
