added samai Lotus Panti Diya

--- a/index.html
+++ b/index.html
@@ -799,6 +799,20 @@
   </a>
 </div>
 
+<!-- Product 41: Samai Lotus Panti-->
+<div class="product rangoli">
+  <img src="https://i.ibb.co/TqMqDFcy/Whats-App-Image-2025-06-08-at-20-23-26-3eba82d8.jpg" alt="Samai Lotus Panti">
+  <h3>Samai Lotus Panti</h3>
+  <p><strong>Price:</strong> ₹700/pair</p>
+  <p>
+    Elegant Samai Lotus Panti designed with lotus petals and traditional aesthetic.<br>
+    A perfect choice to enhance your pooja decor or festive corner with grace.<br>
+    Ideal for Diwali, special occasions, or gifting.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the Samai Lotus Panti – ₹700/pair.%0AImage: https://i.ibb.co/TqMqDFcy/Whats-App-Image-2025-06-08-at-20-23-26-3eba82d8.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
