--- a/index.html
+++ b/index.html
@@ -814,6 +814,21 @@
   </a>
 </div>
 
+<!-- Product 42: Sola Wood Flower Haa-->
+<div class="product haar">
+  <img src="https://i.ibb.co/zHsgYtZ/Whats-App-Image-2025-07-03-at-01-04-06-31286b38.jpg" alt="Sola Wood Flower Haar">
+  <h3>Sola Wood Flower Haar</h3>
+  <p><strong>Price:</strong> ₹150</p>
+  <p>
+    Beautifully crafted 1-feet Kanti made with sola wood flowers and pink fabric flowers.<br>
+    Perfect for pooja, home decor, and traditional ceremonies.<br>
+    Soft, elegant, and handcrafted with care.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the Sola Wood Flower Haar – ₹150.%0AImage: https://i.ibb.co/zHsgYtZ/Whats-App-Image-2025-07-03-at-01-04-06-31286b38.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
