added Home Decor Product

--- a/index.html
+++ b/index.html
@@ -829,6 +829,19 @@
   </a>
 </div>
 
+
+<!-- Product 43: Home Decor Product -->
+<div class="product decor">
+  <img src="https://i.ibb.co/3Yp73zMN/Whats-App-Image-2025-07-03-at-13-06-01-f6caf62e.jpg" alt="Cloth Gonda Flower">
+  <h3>Cloth Gonda Flower</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹150</p>
+  <p>Lemon yellow colour Gonda flower made of cloth. A charming and reusable home décor piece.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Cloth Gonda Flower' (₹150).%0AImage: https://i.ibb.co/3Yp73zMN/Whats-App-Image-2025-07-03-at-13-06-01-f6caf62e.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
