--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
 </head>
 <body>
 
+    <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
+  Created by: <strong>Soham Suhas Gujar</strong>
+</footer>
+
   <h1>DEEP CREATION</h1>
 
   <!-- ✅ Categories Filter -->
