added Lotus Leaf Small

--- a/index.html
+++ b/index.html
@@ -842,6 +842,18 @@
   </a>
 </div>
 
+<!-- Product 44:  Home Decor Product: Lotus Leaf Small -->
+<div class="product decor">
+  <img src="https://i.ibb.co/Z1tWgj8Y/Whats-App-Image-2025-07-03-at-13-06-27-69ec49c1.jpg" alt="Lotus Leaf Small Size">
+  <h3>Lotus Leaf – Small Size</h3>
+  <p><strong>Price:</strong> ₹250</p>
+  <p>Beautifully crafted lotus leaf, perfect for home decor arrangements.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Lotus Leaf – Small Size' (₹250).%0AProduct Image: https://i.ibb.co/Z1tWgj8Y/Whats-App-Image-2025-07-03-at-13-06-27-69ec49c1.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
