--- a/index.html
+++ b/index.html
@@ -853,6 +853,16 @@
   </a>
 </div>
 
+<!-- Product 45 : Home Decor Product: Lotus Leaf Big -->
+<div class="product decor">
+  <img src="https://i.ibb.co/4R9BqWt/Whats-App-Image-2025-07-03-at-13-10-10-bdf3914e.jpg" alt="Lotus Leaf Big Size">
+  <h3>Lotus Leaf – Big Size</h3>
+  <p><strong>Price:</strong> ₹350</p>
+  <p>Large lotus leaf for home decoration or traditional setups. A perfect piece to add elegance and color.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Lotus Leaf – Big Size' (₹350).%0AProduct Image: https://i.ibb.co/4R9BqWt/Whats-App-Image-2025-07-03-at-13-10-10-bdf3914e.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
