added  Home Decor Product: Veni

--- a/index.html
+++ b/index.html
@@ -864,6 +864,30 @@
   </a>
 </div>
 
+<!-- Product 46:  Home Decor Product -->
+<div class="product decor">
+  <img src="https://i.ibb.co/C5H8Ddpz/Whats-App-Image-2025-07-03-at-13-52-12-5bb6135c.jpg" alt="Home Decor Item">
+  <h3>Home Decor Flower Arrangement</h3>
+  <p><strong>Price:</strong> ₹200</p>
+  <p>Elegant and vibrant home decor piece, ideal for festive arrangements, gifting, or enhancing your space.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this Home Decor item (₹200).%0AProduct Image: https://i.ibb.co/C5H8Ddpz/Whats-App-Image-2025-07-03-at-13-52-12-5bb6135c.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
+
+<!--Product 47:  Home Decor Product: Veni -->
+<div class="product decor">
+  <img src="https://i.ibb.co/C5H8Ddpz/Whats-App-Image-2025-07-03-at-13-52-12-5bb6135c.jpg" alt="Veni - Home Decor">
+  <h3>Veni</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹200</p>
+  <p>Beautiful handcrafted veni, ideal for home decor, festive events, or traditional celebrations. Adds charm and grace to any setting.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Veni' (₹200).%0AProduct Image: https://i.ibb.co/C5H8Ddpz/Whats-App-Image-2025-07-03-at-13-52-12-5bb6135c.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
