added  Home Decor Product: Veni

--- a/index.html
+++ b/index.html
@@ -877,6 +877,17 @@
   </a>
 </div>
 
+<!-- Product 47: Home Decor Product: Veni (₹250) -->
+<div class="product decor">
+  <img src="https://i.ibb.co/7dXK7965/Whats-App-Image-2025-07-03-at-13-52-18-ac78b200.jpg" alt="Veni Decor ₹250">
+  <h3>Veni</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹250</p>
+  <p>Elegant and handcrafted veni suitable for traditional decorations and special occasions. Made with premium quality materials to enhance beauty and grace.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Veni' (₹250).%0AProduct Image: https://i.ibb.co/7dXK7965/Whats-App-Image-2025-07-03-at-13-52-18-ac78b200.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
