added  Moti Veni

--- a/index.html
+++ b/index.html
@@ -889,6 +889,18 @@
   </a>
 </div>
 
+<!-- Product 48: Home Decor Product: Moti Veni (₹100) -->
+<div class="product decor">
+  <img src="https://i.ibb.co/m5YSFS2W/Whats-App-Image-2025-07-03-at-13-52-24-d7f15d10.jpg" alt="Moti Veni Decor ₹100">
+  <h3>Moti Veni</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹100</p>
+  <p>Traditional Moti Veni crafted with pearl-like embellishments. Ideal for festive decorations, pooja setup, or hair accessories. Budget-friendly and reusable.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Moti Veni' (₹100).%0AProduct Image: https://i.ibb.co/m5YSFS2W/Whats-App-Image-2025-07-03-at-13-52-24-d7f15d10.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
