added Haar / Kanthi

--- a/index.html
+++ b/index.html
@@ -901,6 +901,18 @@
   </a>
 </div>
 
+<!-- Product 49: Haar Product: Multicolor Haar (₹35 each) -->
+<div class="product haar">
+  <img src="https://i.ibb.co/zWrtJdn8/Whats-App-Image-2025-07-03-at-13-52-32-7b6bccc0.jpg" alt="Multicolor Haar ₹35">
+  <h3>Multicolor Haar</h3>
+  <p><strong>Category:</strong> Haar / Kanthi</p>
+  <p><strong>Price:</strong> ₹35 / per piece</p>
+  <p>Beautiful traditional Haar available in multiple vibrant colors. Lightweight, festive, and ideal for all cultural events or pooja decorations.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order 'Multicolor Haar' (₹35 each).%0AProduct Image: https://i.ibb.co/zWrtJdn8/Whats-App-Image-2025-07-03-at-13-52-32-7b6bccc0.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
