added High Quality Veni

--- a/index.html
+++ b/index.html
@@ -913,6 +913,18 @@
   </a>
 </div>
 
+<!-- Product 50: Decor Product: High Quality Veni (₹140) -->
+<div class="product decor">
+  <img src="https://i.ibb.co/CTSbm5b/Whats-App-Image-2025-07-03-at-13-52-39-1ec0fa4f.jpg" alt="High Quality Veni">
+  <h3>High Quality Veni</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹140</p>
+  <p>High quality Veni with premium design and vibrant colors. Perfect for traditional decoration and festive wear.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order 'High Quality Veni' (₹140).%0AProduct Image: https://i.ibb.co/CTSbm5b/Whats-App-Image-2025-07-03-at-13-52-39-1ec0fa4f.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
