added Multi Color Veni

--- a/index.html
+++ b/index.html
@@ -925,6 +925,18 @@
   </a>
 </div>
 
+<!-- Product 51: Decor Product: Multi Color Veni (₹120) -->
+<div class="product decor">
+  <img src="https://i.ibb.co/4nLXbqVB/Whats-App-Image-2025-07-03-at-13-52-46-e49eaa9e.jpg" alt="Multi Color Veni">
+  <h3>Multi Color Veni</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹120</p>
+  <p>Vibrant multi-color veni crafted with quality fabric and traditional design. Ideal for festive and cultural events.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order 'Multi Color Veni' (₹120).%0AProduct Image: https://i.ibb.co/4nLXbqVB/Whats-App-Image-2025-07-03-at-13-52-46-e49eaa9e.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
