added Traditional Haar

--- a/index.html
+++ b/index.html
@@ -937,6 +937,18 @@
   </a>
 </div>
 
+<!-- Product 52: Haar Product: Traditional Haar (₹100) -->
+<div class="product haar">
+  <img src="https://i.ibb.co/fz8xBxwK/Whats-App-Image-2025-07-03-at-13-52-53-a606152a.jpg" alt="Traditional Haar">
+  <h3>Traditional Haar</h3>
+  <p><strong>Category:</strong> Haar</p>
+  <p><strong>Price:</strong> ₹100</p>
+  <p>Beautiful traditional haar available in elegant design. Suitable for pooja, decoration, or festive use.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order 'Traditional Haar' (₹100).%0AProduct Image: https://i.ibb.co/fz8xBxwK/Whats-App-Image-2025-07-03-at-13-52-53-a606152a.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
