added Vani Decoration

--- a/index.html
+++ b/index.html
@@ -949,6 +949,18 @@
   </a>
 </div>
 
+<!-- Product 53:- Home Decor Product: Vani (₹100) -->
+<div class="product decor">
+  <img src="https://i.ibb.co/Y4pYKfyY/Whats-App-Image-2025-07-03-at-13-52-59-7511650a.jpg" alt="Vani Decoration">
+  <h3>Vani Decoration</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹100</p>
+  <p>Elegant Vani decorative piece to enhance your pooja or festive decor setup. Crafted with care using quality materials.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order 'Vani Decoration' (₹100).%0AProduct Image: https://i.ibb.co/Y4pYKfyY/Whats-App-Image-2025-07-03-at-13-52-59-7511650a.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
