added Multi Color Veni

--- a/index.html
+++ b/index.html
@@ -961,6 +961,18 @@
   </a>
 </div>
 
+<!-- Product 54: Home Decor Product: Multi Color Veni (₹220) -->
+<div class="product decor">
+  <img src="https://i.ibb.co/BF3vCwR/Whats-App-Image-2025-07-03-at-13-53-23-8fd672bf.jpg" alt="Multi Color Veni">
+  <h3>Multi Color Veni</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹220</p>
+  <p>Beautiful multi-colored veni for festive styling and traditional looks. Crafted from premium materials to ensure elegance and durability.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order 'Multi Color Veni' (₹220).%0AProduct Image: https://i.ibb.co/BF3vCwR/Whats-App-Image-2025-07-03-at-13-53-23-8fd672bf.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
