added Latkan Product: Side Latkan

--- a/index.html
+++ b/index.html
@@ -973,6 +973,18 @@
   </a>
 </div>
 
+<!-- Product 55:- Latkan Product: Side Latkan (₹100) -->
+<div class="product latkan">
+  <img src="https://i.ibb.co/FbgFtvZJ/Whats-App-Image-2025-07-03-at-16-13-47-daaf9bc3.jpg" alt="Side Latkan">
+  <h3>Side Latkan</h3>
+  <p><strong>Category:</strong> Latkan</p>
+  <p><strong>Price:</strong> ₹100</p>
+  <p>Beautifully handcrafted side latkan for enhancing backdrop setups and festive decorations. Elegant and durable.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order 'Side Latkan' (₹100).%0AProduct Image: https://i.ibb.co/FbgFtvZJ/Whats-App-Image-2025-07-03-at-16-13-47-daaf9bc3.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
