added Latkan Product: Side Latkan

--- a/index.html
+++ b/index.html
@@ -985,6 +985,18 @@
   </a>
 </div>
 
+<!-- Product:-56 Latkan Product: Side Latkan (₹100 each) -->
+<div class="product latkan">
+  <img src="https://i.ibb.co/S7vtDCQD/Whats-App-Image-2025-07-03-at-16-13-47-f6139920.jpg" alt="Side Latkan">
+  <h3>Side Latkan</h3>
+  <p><strong>Category:</strong> Latkan</p>
+  <p><strong>Price:</strong> ₹100 each</p>
+  <p>Elegant side latkan, ideal for decorating pooja areas, walls, or backdrops. Lightweight and easy to hang.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Side Latkan' (₹100 each).%0AProduct Image: https://i.ibb.co/S7vtDCQD/Whats-App-Image-2025-07-03-at-16-13-47-f6139920.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
