added Latkan Product: Decorative Latkan

--- a/index.html
+++ b/index.html
@@ -997,6 +997,18 @@
   </a>
 </div>
 
+<!-- Product 57:- Latkan Product: Decorative Latkan (₹100 each) -->
+<div class="product latkan">
+  <img src="https://i.ibb.co/LGC1x4Z/Whats-App-Image-2025-07-03-at-16-13-48-aaffdeb6.jpg" alt="Decorative Latkan">
+  <h3>Decorative Latkan</h3>
+  <p><strong>Category:</strong> Latkan</p>
+  <p><strong>Price:</strong> ₹100 each</p>
+  <p>Beautiful handcrafted latkan, perfect for festive decorations, pooja setups, and backdrops. Made from high-quality materials for durability.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Decorative Latkan' (₹100 each).%0AProduct Image: https://i.ibb.co/LGC1x4Z/Whats-App-Image-2025-07-03-at-16-13-48-aaffdeb6.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
