added  Upcoming Exhibition Announcement

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <p style="font-size: 16px; color: #000;">
     We are excited to invite you to our upcoming exhibition!<br><br>
     📅 <strong>Date:</strong> 7th, 8th, 9th, and 10th August 2025<br>
-    🏛️ <strong>Hall:</strong> Scout Banquet Hall<br>
+    🏛️ <strong>Hall:</strong> Scout Guide Hall<br>
     📍 <strong>Location:</strong> Shivaji Park, Dadar<br><br>
     🛍️ <strong>Do visit our stall and explore handcrafted decor and accessories by Deep Creation!</strong>
   </p>
