added  Upcoming Exhibition Announcement

--- a/index.html
+++ b/index.html
@@ -102,19 +102,32 @@
   <button onclick="filterProducts('decor')">Home Decor</button>
 </div>
 
-<!-- 🔔 Upcoming Exhibition Announcement -->
-<section style="background-color: #fff3cd; border: 2px solid #ffeeba; padding: 20px; text-align: center; margin-bottom: 20px;">
-  <h2 style="color: #856404; margin-bottom: 10px;">📢 Upcoming Exhibition</h2>
-  <img src="https://i.ibb.co/jktZ8CjC/Whats-App-Image-2025-07-05-at-20-51-39-ea0bcbf9.jpg" alt="Deep Creation Exhibition Banner" style="max-width: 100%; height: auto; border-radius: 10px; margin-bottom: 15px;">
-  <p style="font-size: 16px; color: #000;">
-    We are excited to invite you to our upcoming exhibition!<br><br>
-    📅 <strong>Date:</strong> 7th, 8th, 9th, and 10th August 2025<br>
-    🏛️ <strong>Hall:</strong> Scout Guide Hall<br>
-    📍 <strong>Location:</strong> Shivaji Park, Dadar<br><br>
-    🛍️ <strong>Do visit our stall and explore handcrafted decor and accessories by Deep Creation!</strong>
-  </p>
-</section>
+<!-- 🌟 Scrollable Exhibition Banner Section -->
+<div id="exhibition-container" style="overflow-x: auto; white-space: nowrap; padding: 20px 10px;">
+  <!-- Exhibition 1 -->
+  <div class="exhibition-banner" style="display: inline-block; width: 90%; max-width: 500px; margin-right: 20px; background: #fff3e0; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+    <img src="https://i.ibb.co/jktZ8CjC/Whats-App-Image-2025-07-05-at-20-51-39-ea0bcbf9.jpg" alt="Exhibition Banner" style="width: 100%; border-radius: 10px; object-fit: cover; max-height: 250px;" />
+    <div style="margin-top: 15px;">
+      <h2 style="color: #d84315; margin: 0;">Upcoming Exhibition</h2>
+      <p style="margin: 5px 0;"><strong>📅 Dates:</strong> 7, 8, 9, 10 August 2025</p>
+      <p><strong>📍 Hall:</strong> Scout Banquet Hall</p>
+      <p><strong>🗺 Address:</strong> Shivaji Park, Dadar</p>
+      <p style="color: #2e7d32; font-weight: bold;">Do visit our stall!</p>
+    </div>
+  </div>
 
+  <!-- Exhibition 2 -->
+  <div class="exhibition-banner" style="display: inline-block; width: 90%; max-width: 500px; margin-right: 20px; background: #f3e5f5; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+    <img src="https://i.ibb.co/jktZ8CjC/Whats-App-Image-2025-07-05-at-20-51-39-ea0bcbf9.jpg" alt="Exhibition Banner 2" style="width: 100%; border-radius: 10px; object-fit: cover; max-height: 250px;" />
+    <div style="margin-top: 15px;">
+      <h2 style="color: #6a1b9a; margin: 0;">Upcoming Exhibition</h2>
+      <p style="margin: 5px 0;"><strong>📅 Dates:</strong> 1, 2, 3 August 2025</p>
+      <p><strong>📍 Hall:</strong> CKP HALL</p>
+      <p><strong>🗺 Address:</strong> Besides NKTT College, Ganpat Jairam Kharkar Ali Marg, Thane West, Maharashtra 400601</p>
+      <p style="color: #2e7d32; font-weight: bold;">Do visit our stall!</p>
+    </div>
+  </div>
+</div>
 
 
 
