added  Upcoming Exhibition Announcement

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <h2 style="color: #6a1b9a; margin: 0;">Upcoming Exhibition</h2>
       <p style="margin: 5px 0;"><strong>📅 Dates:</strong> 1, 2, 3 August 2025</p>
       <p><strong>📍 Hall:</strong> CKP HALL</p>
-      <p><strong>🗺 Address:</strong> Besides NKTT College, Kharkar Alley, Thane West, Maharashtra 400601</p>
+      <p><strong>🗺 Address:</strong> Besides NKTT College, Kharkar Alley, Thane West</p>
       <p style="color: #2e7d32; font-weight: bold;">Do visit our stall!</p>
     </div>
   </div>
