added  Upcoming Exhibition Announcement

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div style="margin-top: 15px;">
       <h2 style="color: #d84315; margin: 0;">Upcoming Exhibition</h2>
       <p style="margin: 5px 0;"><strong>📅 Dates:</strong> 7, 8, 9, 10 August 2025</p>
-      <p><strong>📍 Hall:</strong> Scout Banquet Hall</p>
+      <p><strong>📍 Hall:</strong> Scout Guide Hall</p>
       <p><strong>🗺 Address:</strong> Shivaji Park, Dadar</p>
       <p style="color: #2e7d32; font-weight: bold;">Do visit our stall!</p>
     </div>
