--- a/index.html
+++ b/index.html
@@ -5,87 +5,89 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Deep Creation Catalog</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 20px;
-      background: #f1f1f1;
-    }
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    margin: 0;
+    padding: 20px;
+    background: #121212;
+    color: #ffffff;
+  }
 
-    h1 {
-      text-align: center;
-      color: #2e7d32;
-      margin-bottom: 20px;
-    }
+  h1 {
+    text-align: center;
+    color: #90ee90;
+    margin-bottom: 20px;
+  }
 
-    .categories {
-      text-align: center;
-      margin-bottom: 30px;
-    }
+  .categories {
+    text-align: center;
+    margin-bottom: 30px;
+  }
 
-    .categories button {
-      background-color: #228b22;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      margin: 5px;
-      font-size: 16px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: 0.3s ease;
-    }
+  .categories button {
+    background-color: #2e7d32;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 5px;
+    font-size: 16px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 0.3s ease;
+  }
 
-    .categories button:hover {
-      background-color: #1c6b1c;
-    }
+  .categories button:hover {
+    background-color: #1b5e20;
+  }
 
-    .catalog {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
+  .catalog {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+  }
 
-    .product {
-      background: white;
-      padding: 15px;
-      border-radius: 15px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      text-align: center;
-      transition: 0.3s ease;
-    }
+  .product {
+    background: #1e1e1e;
+    padding: 15px;
+    border-radius: 15px;
+    box-shadow: 0 5px 15px rgba(255,255,255,0.05);
+    text-align: center;
+    transition: 0.3s ease;
+  }
 
-    .product img {
-      max-width: 100%;
-      border-radius: 10px;
-      height: 180px;
-      object-fit: cover;
-    }
+  .product img {
+    max-width: 100%;
+    border-radius: 10px;
+    height: 180px;
+    object-fit: cover;
+  }
 
-    .product h3 {
-      margin: 10px 0 5px;
-      color: #333;
-    }
+  .product h3 {
+    margin: 10px 0 5px;
+    color: #ffffff;
+  }
 
-    .product p {
-      margin: 5px 0;
-      color: #555;
-      font-size: 14px;
-    }
+  .product p {
+    margin: 5px 0;
+    color: #cccccc;
+    font-size: 14px;
+  }
 
-    .whatsapp {
-      display: inline-block;
-      margin-top: 10px;
-      background-color: #25D366;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 8px;
-      text-decoration: none;
-    }
+  .whatsapp {
+    display: inline-block;
+    margin-top: 10px;
+    background-color: #25D366;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 8px;
+    text-decoration: none;
+  }
 
-    .whatsapp:hover {
-      background-color: #128C7E;
-    }
-  </style>
+  .whatsapp:hover {
+    background-color: #128C7E;
+  }
+</style>
+
 </head>
 <body>
 
